# raytracer-challenge

./: CMakeLists.txt
gui/: main.cpp  window.cpp  window.hpp
gui/cmake_scripts/: Qt.cmake
lib/: bitmap.cpp  bitmap.hpp  color.hpp  mat.hpp  math.hpp  ray.hpp  vec.hpp  world.hpp
test/: bitmap.cpp  color.cpp  mat.cpp  math.cpp  ray.cpp  vec.cpp  world.cpp
